// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress Snap render Progress -- props color 1`] = `
<view
  class="at-progress at-progress--progress"
>
  <view
    class="at-progress__outer"
  >
    <view
      class="at-progress__outer-inner"
    >
      <view
        class="at-progress__outer-inner-background"
        style="width: 0px; height: 0px; background-color: rgb(255, 73, 73);"
      />
    </view>
  </view>
  <view
    class="at-progress__content"
  >
    0%
  </view>
</view>
`;

exports[`Progress Snap render Progress -- props isHidePercent 1`] = `
<view
  class="at-progress at-progress--progress"
>
  <view
    class="at-progress__outer"
  >
    <view
      class="at-progress__outer-inner"
    >
      <view
        class="at-progress__outer-inner-background"
        style="width: 0px; height: 0px;"
      />
    </view>
  </view>
</view>
`;

exports[`Progress Snap render Progress -- props percent 1`] = `
<view
  class="at-progress at-progress--progress"
>
  <view
    class="at-progress__outer"
  >
    <view
      class="at-progress__outer-inner"
    >
      <view
        class="at-progress__outer-inner-background"
        style="width: 25%; height: 0px;"
      />
    </view>
  </view>
  <view
    class="at-progress__content"
  >
    25%
  </view>
</view>
`;

exports[`Progress Snap render Progress -- props status(error) 1`] = `
<view
  class="at-progress at-progress--error"
>
  <view
    class="at-progress__outer"
  >
    <view
      class="at-progress__outer-inner"
    >
      <view
        class="at-progress__outer-inner-background"
        style="width: 0px; height: 0px;"
      />
    </view>
  </view>
  <view
    class="at-progress__content"
  >
    <view
      class="at-icon at-icon-close-circle"
    />
  </view>
</view>
`;

exports[`Progress Snap render Progress -- props status(progress) 1`] = `
<view
  class="at-progress at-progress--progress"
>
  <view
    class="at-progress__outer"
  >
    <view
      class="at-progress__outer-inner"
    >
      <view
        class="at-progress__outer-inner-background"
        style="width: 0px; height: 0px;"
      />
    </view>
  </view>
  <view
    class="at-progress__content"
  >
    0%
  </view>
</view>
`;

exports[`Progress Snap render Progress -- props status(success) 1`] = `
<view
  class="at-progress at-progress--success"
>
  <view
    class="at-progress__outer"
  >
    <view
      class="at-progress__outer-inner"
    >
      <view
        class="at-progress__outer-inner-background"
        style="width: 0px; height: 0px;"
      />
    </view>
  </view>
  <view
    class="at-progress__content"
  >
    <view
      class="at-icon at-icon-check-circle"
    />
  </view>
</view>
`;

exports[`Progress Snap render initial Progress 1`] = `
<view
  class="at-progress at-progress--progress"
>
  <view
    class="at-progress__outer"
  >
    <view
      class="at-progress__outer-inner"
    >
      <view
        class="at-progress__outer-inner-background"
        style="width: 0px; height: 0px;"
      />
    </view>
  </view>
  <view
    class="at-progress__content"
  >
    0%
  </view>
</view>
`;
